--- a/pwd_generator.html
+++ b/pwd_generator.html
@@ -3,16 +3,28 @@
 <link rel="stylesheet" type="text/css" href="estilo.css" />
 </head>
 <body>
-<div id="corpo">
-<center>
-<h1>Gerador de senhas</h1>
 
-<input type="text" id="recebe" value=""></br>
-<input type="checkbox" class="check" id="mai">MAIUSCULAS</input></br>
-<input type="checkbox" class="check" id="min">minusculas</input></br>
-<input type="checkbox" class="check" id="num">Núm3r05</input></br>
-<input type="checkbox" class="check" id="simb">$!mb#l#$</input></br>
-<input type="button" id="btn" value="Gerar">
-</center>
+<section id="cabecalho">
+	<h1>Gerador de senhas</h1>
+</section>
+
+<section id="conteudo">
+	<input type="text" id="recebe" value=""></br>
+	<input type="checkbox" class="check" id="mai"><label>MAIUSCULAS</label><br>
+	<input type="checkbox" class="check" id="min"><label>minusculas</label><br>
+	<input type="checkbox" class="check" id="num"><label>Núm3r05</label><br>
+	<input type="checkbox" class="check" id="simb"><label>$!mb#l#$</label><br>
+	
+	<input type="button" id="btn" value="Gerar" onclick="gerar()">
+</section>
+
+<section id="rodape">
+	
+</section>
+
+
+
+
+
 </body>
 </html>
