--- a/pwd_generator.html
+++ b/pwd_generator.html
@@ -10,6 +10,8 @@
 
 <section id="conteudo">
 	<input type="text" id="recebe" value=""></br>
+	<label for="caracteres">Quantidade de caracteres:</label><br>
+	4<input type="range" id="caracteres" min="4" max="24">24<br>
 	<input type="checkbox" class="check" id="mai" name="mai"><label for="mai">MAIUSCULAS</label><br>
 	<input type="checkbox" class="check" id="min" name="min"><label for="min">minusculas</label><br>
 	<input type="checkbox" class="check" id="num" name="num"><label for="num">Núm3r05</label><br>
