--- a/pwd_generator.html
+++ b/pwd_generator.html
@@ -9,7 +9,7 @@
 </section>
 
 <section id="conteudo">
-	<input type="text" id="recebe" value=""></br>
+	<div id="recebe" value=""></div><br>
 	<label for="caracteres">Quantidade de caracteres:</label><br>
 	4<input type="range" id="caracteres" min="4" max="24">24<br>
 	<input type="checkbox" class="check" id="mai" name="mai"><label for="mai">MAIUSCULAS</label><br>
