mexendo no estilo

--- a/pwd_generator.html
+++ b/pwd_generator.html
@@ -12,11 +12,12 @@
 	<div id="recebe" value=""></div><br>
 	<label for="caracteres">Quantidade de caracteres:</label><br>
 	4<input type="range" id="caracteres" min="4" max="24">24<br>
+	<div class="checks">
 	<input type="checkbox" class="check" id="mai" name="mai"><label for="mai">MAIUSCULAS</label><br>
 	<input type="checkbox" class="check" id="min" name="min"><label for="min">minusculas</label><br>
 	<input type="checkbox" class="check" id="num" name="num"><label for="num">Núm3r05</label><br>
 	<input type="checkbox" class="check" id="simb" name="simb"><label for="simb">$!mb#l#$</label><br>
-	
+	</div>
 	<button id="btn">Gerar</button>
 </section>
 
