--- a/index.html
+++ b/index.html
@@ -20,10 +20,11 @@
 	</div>
 	<button id="btn">Gerar</button>
 </section>
-
+Criado por<a href="https://davesilveira.github.io/DaveSilveira/"> DaveSilveira</a>
 <section id="rodape">
 	
 </section>
 <script src="script.js"></script>
 </body>
 </html>
+
